--- a/Budgy-Server.Infrastructure/Budgy-Server.Infrastructure.csproj
+++ b/Budgy-Server.Infrastructure/Budgy-Server.Infrastructure.csproj
@@ -8,11 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Models\" />
     <Folder Include="Data\Configurations\" />
     <Folder Include="Data\Enums\" />
-    <Folder Include="Data\Common\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
   </ItemGroup>
 
 </Project>
