--- a/Budgy-Server/Properties/launchSettings.json
+++ b/Budgy-Server/Properties/launchSettings.json
@@ -4,6 +4,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "anonymousAuthentication": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
