--- a/Budgy-Server.Common/Budgy-Server.Common.csproj
+++ b/Budgy-Server.Common/Budgy-Server.Common.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.20" />
+  </ItemGroup>
+
 </Project>
