--- a/Budgy-Server.Core/Budgy-Server.Core.csproj
+++ b/Budgy-Server.Core/Budgy-Server.Core.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.20" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Budgy-Server.Infrastructure\Budgy-Server.Infrastructure.csproj" />
   </ItemGroup>
 
